<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/fondo5"
    android:padding="15dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textSize="25sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_login"
        android:text="Iniciar sesión"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/color_opcion2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="------------ OR ------------"
        android:textAllCaps="true"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <ImageButton
        android:id="@+id/btn_login_google"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_marginLeft="50dp"
        android:background="@drawable/appgoogle"
        android:layout_height="wrap_content"/>

    <ImageButton
        android:id="@+id/btn_login_fb"
        android:layout_marginTop="-60dp"
        android:layout_marginRight="70dp"
        android:layout_width="wrap_content"
        android:background="@drawable/appfacebook"
        android:layout_height="wrap_content"/>
<!--
    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp" /> -->




    <Button
        android:id="@+id/registerNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Click AQUI para Registrarse"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginTop="60dp"
        android:textSize="20sp"
        android:backgroundTint="#675C29"
        android:textStyle="bold|italic" />

</LinearLayout>